third_party/WebKit/WebCore/platform/graphics/transforms/TransformationMatrix.h
@@ -45,7 +45,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #endif
 
 #if PLATFORM(WIN) || (PLATFORM(QT) && OS(WINDOWS)) || (PLATFORM(WX) && OS(WINDOWS))
+#if COMPILER(MINGW)
+typedef struct _XFORM XFORM;
+#else
 typedef struct tagXFORM XFORM;
+#endif
 #endif
 
 namespace WebCore {
